Did some more work on the HW, might be done with it

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
     <header>
+        <img class="img1" src="/images/SFA-Logo.png" alt="SFA Logo">
+        <nav>
+            <a href="">Resume</a>
+            <a href="">About Me</a>
+            <a href="">My Portfolio</a>
+            <a href="">Contact Me</a>
+        </nav>
 
-        
     </header>
+
+    <div></div>
+    <div></div>
+    <main>
+        <img class="img2" src="/images/Me.jpg" alt="A picture of me">
+        <h1>Joshua Brice</h1>
+        <h2>Student of Computer Science</h2>
+
+
+    </main>
+
 </body>
 </html>
